# DenoiseRs

./: .gitmodules  Cargo.toml  README.md
BM3D_rs/: Cargo.toml  README.md
BM3D_rs/.github/: CODEOWNERS
BM3D_rs/src/: bm3d.rs  error.rs  lib.rs  main.rs
BM3D_rs/src/blocks/: aggregate.rs  group.rs  match.rs  match_b.rs  mod.rs
BM3D_rs/src/color/: format.rs
BM3D_rs/src/gpu/: mod.rs
BM3D_rs/src/threshold/: hard.rs  mod.rs
BM3D_rs/src/transform/: dct.rs  dct_implementation.md  mod.rs  wiener.rs
BM3D_rs/src/utils/: metrics.rs  mod.rs
median/: .gitignore  Cargo.toml
median/src/: lib.rs  models.rs
median/tests/: output_test.png.rrdata  test_denoise.rs
src/: bm3d.rs  error.rs  lib.rs
src/blocks/: aggregate.rs  group.rs  match.rs  mod.rs
src/color/: format.rs  mod.rs  ycbcr.rs
src/threshold/: hard.rs
src/transform/: dct.rs  mod.rs  wiener.rs
src/utils/: metrics.rs  mod.rs
