[package]
name = "bm3d_rs"
version = "0.1.0"
edition = "2024"
authors = ["Riccardo <riccioadami@gmail.com>"]
repository = "https://github.com/riccio8/BM3D_rs"


[dependencies]
image = "0.25"
ndarray = "0.16.1"
rayon = "1.11.0"
rustdct = "0.7"
palette = "0.7"
num_cpus = "1.17.0"
zune-image = "0.4.15"
