[package]
name = "bm3d_rs"
version = "0.1.0"
edition = "2024"
authors = ["Riccardo <riccioadami@gmail.com>"]
repository = "https://github.com/riccio8/BM3D_rs"


[dependencies]
image = "0.25.9"
ndarray = "0.17.1"
rayon = "1.11.0"
rustdct = "0.7"
palette = "0.7"
num_cpus = "1.17.0"
zune-image = "0.4.15"
dwt = "0.5.2"
rustfft = "6.4.1"
noise = "0.9.0"
nalgebra = "0.34.1"
signal-transforms = "0.1.5"
approx = "0.5.1"
tempfile = "3.23.0"
clap = { version = "4.5.53", features = ["derive"] }
ocl-core = "0.11.5"

# Configurazione ottimizzata per release
[profile.release]
# Ottimizzazione massima per CPU moderna
opt-level = 3
# Usa tutte le ottimizzazioni link-time
lto = "fat"           # o "thin" per tempi di compilazione più brevi
# Usa CPU specifica (modifica per la tua CPU)
codegen-units = 1     # Migliore ottimizzazione, compilazione più lenta
# Rimuovi debug info
strip = "debuginfo"   # o "symbols" per ridurre dimensione
# Rimuovi asserts
debug = false
# Abilita CPU-specific optimizations
target-cpu = "native" # Usa istruzioni della tua CPU

# Configurazione per debug (veloce compilazione)
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

# Configurazione per test/benchmark
[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 16    # Compilazione più veloce per benchmark
debug = false